apps/web-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-demo-svc
spec:
  type: ClusterIP
  selector:
    app: web-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
