apps/web-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-demo-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: miweb.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-demo-svc
            port:
              number: 80
